[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ampscz-langsamp-release-pipeline"
version = "0.2.0"
description = "Utilities for structuring and parsing transcripts for the AMPSCZ NDA Data Release 4 and beyond"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Benjamin Dixon"},
    {name = "Phillip Wolff"}
]

dependencies = [
    "vllm",
    "polars",
    "stanza",
    "rich",
    "spacy"
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["cli*", "utils*", "features*", "data*", "misc*"]
